# remoBot

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
.zed/: debug.json  settings.json  tasks.json
src/: background_manager.py  main.py  settings.py
src/models/: __init__.py  host.py  operation.py
src/modules/: funcs.py
src/modules/add_connection/: dialogs.py  funcs.py  states.py
src/modules/connection/add_connection/: dialogs.py  funcs.py
src/modules/connection/edit_connection/: dialogs.py  funcs.py
src/modules/edit_connection/: dialogs.py  funcs.py  states.py
src/modules/elements/: confirm_window.py  get_text_window.py  print_host.py  prints.py  select_host.py  select_scroll.py
src/modules/main_menu/: dialogs.py  states.py
src/modules/manage_tasks/: dialogs.py  funcs.py  states.py
src/modules/operation/add_operation/: dialogs.py  funcs.py  states.py
src/modules/operation/edit_operation/: dialogs.py  funcs.py  states.py
src/modules/operation/execute_operations/: dialogs.py  funcs.py  states.py
src/ssh/: exceptions.py  ssh_connection.py
