[project]
name = "remobot"
version = "0.1.1"
description = "A Telegram bot designed for remote server management and monitoring via SSH."
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "aiogram-dialog>=2.6.0",
    "asyncssh>=2.23.0",
    "pydantic-settings>=2.14.1",
    "tortoise-orm>=1.1.7",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
]
